examples/type_system/failing/01_compile_type_mismatch.flx
fn add(a: Int, b: Int) -> Int {
    a + b
}

// Compile-time mismatch: argument #1 is String, expected Int.
add("x", 2)
